trinium/_sidebar.scss
#hamburger {
    background: $content-box-background-color;
    border-right: 1px solid $content-box-border-color;

    top: $header-height;
    left: -250px;
    position: fixed;
    z-index: 2000;
    padding: $content-box-padding 0;
    height: calc(100vh - $header-height);

    @include responsive('tiny') {
        width: 200px;
    }

    @include responsive('small') {
        width: 225px;
    }

    @include responsive('medium') {
        width: 250px;
    }

    display: block;
    overflow-y: scroll;

    @include scrollbar();

    transition: left 0.25s cubic-bezier(0.33, 1, 0.68, 1),
    right 0.25s cubic-bezier(0.33, 1, 0.68, 1);

    @media (prefers-reduced-motion) {
        transition: none;
    }

    &.active {
        left: 0;
    }

    [dir="rtl"] & {
        left: auto;
        right: -250px;

        &.active {
            right: 0;
        }
    }
}

/* this was gonna be flex-grid but i'm pretty sure this is only 
    gonna be used as the sidebar container so whatever */
.sidebar-page-grid {
    @include responsive('small') {
        display: block;
    }

    @include responsive('medium') {
        display: flex;

        .content {
            flex-grow: 1;
        }
    }
}

.sidebar-container {
    display: none;
    flex: 0 0 auto;

    @include responsive('tiny') {
        //display: none;
    }

    @include responsive('small') {
        //display: none;
    }

    @include responsive('medium') {
        //display: block;
        width: 180px;
    }

    @include responsive('large') {
        //display: block;
        width: 250px;
    }

    &.active {
        display: block;
    }
}

.sidebar {
    @include scrollbar();
    max-height: 100vh;

    position: sticky;
    top: 58px;
    margin-right: 1em;

    &.with-jumbotron {
        margin-bottom: -149px;
    }
}

.hamburger,
.sidebar {
    .list {
        margin: 0;
        padding: 0;
        list-style: none;

        .list-header {
            margin-top: 0.8rem;
            display: block;
            padding: $menu-item-padding;
            color: rgba($header-link-color, 66%);

            @if $theme =="default" {
                text-transform: uppercase;
                font-size: 0.7rem;
                font-weight: bold;
            }

            @else {
                font-size: 0.8rem;
            }
        }

        .list-link {
            .list-link-profile-picture {
                display: inline-block;
                width: 18px;
                height: 18px;
            }

            a {
                display: flex;
                padding: $menu-item-padding;
                color: rgba($header-link-color, 75%);
                align-items: center;
                gap: 0.4rem;

                &:hover {
                    background: $header-link-hover;
                    color: $header-link-color;
                    text-decoration: none;
                }

                &:active,
                &.selected {
                    background: $header-link-active;
                    color: $header-link-color;
                    text-decoration: none;
                }
            }
        }
    }
}

